2009-02-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-manager.c (authenticate_auth): Fix crash when
	getting a 407 when using SoupProxyResolverGNOME (or when not using
	any proxy). Launchpad bug #326099. (Note that this doesn't
	actually make proxy-auth-with-SoupProxyResolverGNOME *work*, it
	just makes it not crash.)

2009-02-02  Dan Winship  <danw@gnome.org>

	* configure.in: 2.25.5

	* NEWS: update

2009-02-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-proxy-resolver-gconf.h:
	* libsoup/soup-proxy-resolver-gconf.c: Remove this, as it was
	incomplete, and libproxy is now officially a dependency of GNOME.

	* libsoup/Makefile.am:
	* libsoup/soup-gnome-features.c: remove gconf-vs-libproxy ifdefs

	* configure.in: Remove GConf checks, require libproxy if building
	libsoup-gnome.

2009-01-29  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-body.c (soup_message_body_wrote_chunk): Fix
	this; previously it would discard the entire message body after
	writing a SOUP_MEMORY_TEMPORARY chunk. Part of WebKit bug 18343.

	* libsoup/soup-message-io.c (io_write): use
	io->write_chunk->length *before* freeing io->write_chunk.

	* tests/chunk-test.c (do_temporary_test): new test to make sure
	that TEMPORARY buffers are handled properly.

2009-01-21  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session-feature.h: remove the dummy typedef for
	struct SoupSessionFeature that was needed because we weren't
	scanning soup-types.h. Fixes the build with non-GNU compilers.

	* libsoup/soup-session-feature.c: document
	SoupSessionFeatureInterface

	* docs/reference/Makefile.am (IGNORE_HFILES): oops, don't ignore
	soup-types.h

	* docs/reference/libsoup-2.4-docs.sgml:
	* docs/reference/libsoup-2.4-sections.txt: Split
	SoupSessionFeature into its own file.

2009-01-12  Dan Winship  <danw@gnome.org>

	* libsoup/soup-cookie-jar.c (request_started): Don't pass NULL to
	soup_message_headers_replace(), call soup_message_headers_remove()