@@ -8,6 +8,7 @@
 
   <chapter>
     <title>Tutorial</title>
+    <xi:include href="build-howto.xml"/>
     <xi:include href="client-howto.xml"/>
     <xi:include href="server-howto.xml"/>
     <xi:include href="porting-2.2-2.4.xml"/>
